--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Welcome To</h1>
         <h1><span class="name-highlite">Jilik</span> Website</h1>
         <h3>World-Class Professional Web Developer</h3>
-        <p>I am a professional web developer. We have an agency with around 20 professional web developers. We all work together. If you want, you can create a professional website for your business from us.I am a professional web developer. We have an agency with around 20 professional web developers. We all work together. If you want, you can create a professional website for your business from us.</p>
+        <p>I am a professional web developer. We have an agency with around 20 professional web developers. We all work together. If you want, you can create a professional website for your business from us.</p>
         </div>
         <div class="half-width">
             <img src="images/my-image.png" alt="">
