--- a/index.html
+++ b/index.html
@@ -11,15 +11,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-        <h1><span class="name-highlite">Jilik</span> Website</h1>
+        <h1><span class="orange-highlite">Jilik</span> Website</h1>
         <h3>World-Class Professional Web Developer</h3>
         <p>I am a professional web developer. We have an agency with around 20 professional web developers. We all work together. If you want, you can create a professional website for your business from us.</p>
+        <a class="link-button" target="_blank" href="https://www.instagram.com/mahibul_jilik/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/my-image.png" alt="">
+        </div>
+    </section>
+    <section class="last-banner">
+        <div class="half-width">
+            <img src="images/my-image-2.png" alt="">
+        </div>    
+        <div class="half-width">
+            <h2>Big <span class="orange-highlite">Dream</span></h2>
+            <h3>Become a web developer</h3>
+            <p>I am a professional web developer. We have an agency with around 20 professional web developers. We all work together. If you want, you can create a professional website for your business from us.</p>
+            <a target="_blank" class="link-button" href="https://www.instagram.com/mahibul_jilik/">VISIT MY INSTAGRAM</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experience</h2>
+        <div class="last-work">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-highlite">2023 - Present । Pro Level Web Developer</h3>
+            <p>I am a professional web developer. We have an agency with around 20 professional web developers. We all work together. If you want, you can create a professional website for your business from us. I am a professional web developer. We have an agency with around 20 professional web developers. We all work together. If you want, you can create a professional website for your business from us. I am a professional web developer. We have an agency with around 20 professional web developers. We all work together. If you want, you can create a professional website for your business from us. I am a professional web developer. We have an agency with around 20 professional web developers. We all work together. If you want, you can create a professional website for your business from us.</p>
+        </div>
+        <div class="last-work">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlite">2022-2023 । Programing Pro Learner</h3>
+            <p>I am a professional web developer. We have an agency with around 20 professional web developers. We all work together. If you want, you can create a professional website for your business from us. I am a professional web developer. We have an agency with around 20 professional web developers. We all work together. If you want, you can create a professional website for your business from us. I am a professional web developer. We have an agency with around 20 professional web developers. We all work together. If you want, you can create a professional website for your business from us.</p>
         </div>
     </section>
 </body>
